# TaskForInterview

./: CMakeLists.txt
root/child1/: 1f1.txt
root/child2/2child3/: 1f2.txt
root/child3/Nowy folder/Nowy folder/Nowy folder/Nowy folder/Nowy folder/: nowy.txt
src/: CMakeLists.txt  analyzer.h  main.cpp
tst/: CMakeLists.txt  analyzer-test.cpp
